# git-lfs-lib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: conan_install.cmake
src/: CMakeLists.txt  conanfile.txt  dll_export.h  git-lfs-lib.cpp  lfs_comm.cpp  lfs_comm.h  lfs_pointer.cpp
src/lfs/: lfs_comm.cpp  lfs_comm.h  lfs_pointer.cpp  lfs_pointer.h
src/lfs/comm/: comm_action.cpp  comm_action.h
src/utils/: string_utils.h
test/: CMakeLists.txt  conanfile.txt
test/src/: lfs_pointer_test.cpp  main.cpp
